test: add unit tests for link, participant, trip, and activity services and trip controller