@@ -9,7 +9,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -32,7 +32,7 @@ class TripServiceTest {
                 "Florianópolis",
                 "2026-04-10T10:00:00",
                 "2026-04-20T10:00:00",
-                Arrays.asList("email@test.com"),
+                List.of("email@test.com"),
                 "owner@test.com",
                 "Owner Name"
         );
